图片显示单独一行，增加获取内容中图片数组接口

--- a/example/base.html
+++ b/example/base.html
@@ -15,7 +15,7 @@
 <script src="../index.js"></script>
 <script>
     var e = lyEditor.init("#editor");
-    e.upload("../upload.php","imgs[]",function(){
+    e.upload("../php/upload.php","imgs[]","",function(){
         console.log("uploaded");
     });
 </script>
