--- a/example/index.html
+++ b/example/index.html
@@ -17,7 +17,7 @@
 <script src="../index.js"></script>
 <script>
     var e = lyEditor.init("#editor");
-    e.upload("../php/upload.php","imgs","../images/uploads/", "/lyEditor/images/uploads/",function(){
+    e.upload("../php/upload.php","imgs","/lyEditor/images/uploads/", "/lyEditor/images/uploads/",function(){
         console.log("uploaded");
     });
    document.querySelector(".gethtml").onclick=function(){
